--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     /* height: 3000px; */
 }
 #shownav{
-    top: -80px;
+    top: 0px;
     transition: top 0.3s ease;
 }
 .navbar{
@@ -82,6 +82,9 @@ body {
 
 
 /* top bar in image start */
+.container-satu{
+    position: relative;
+}
 .container-satu .nav_top{
     height: 80px;
     display: flex;
@@ -168,9 +171,11 @@ body {
     height: 100px;
 }
 .container-satu .btn-centered{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
 }
 
 .container-satu .btn-centered .btn-contact {
@@ -190,11 +195,7 @@ body {
 
 .container-satu .btn-centered .btn-contact:hover {
     cursor: pointer;
-    width: 300px;
-    height: 80px;
-    font-size: 120%;
-    padding: 20px 30px;
-    background-color: #ff0000;
+    transform: scale(1.15);
 }
 
 /* container 2 - Fasilitas*/
