--- a/css/try.css
+++ b/css/try.css
@@ -1,18 +1,32 @@
 .grandparent{
     border: 1px solid black;
-    margin: 1rem;
-    padding: 2rem 2rem;
+    /* margin: 10px;
+    padding: 10px; */
     text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
 }
 .parent {
     display: inline-block;
-    border: 1px solid rgb(12, 12, 12);
+    border: 1px solid rgb(0, 60, 255);
     padding: 1rem 1rem;
-    vertical-align: middle;
+    vertical-align: bottom;
 }
 .child {
     display: inline-block;
     border: 1px solid red;
-    padding: 1rem 1rem;
+    padding: 20px;
+    margin: 0px;
+    width: 80px;
+    word-wrap: break-word;
     vertical-align: middle;
+}
+.child img{
+    height: 60px;
+}
+@media (max-width: 1280px){
+    .grandparent{
+    flex-direction: column;
+    }
 }
