--- a/css/try.css
+++ b/css/try.css
@@ -25,8 +25,19 @@
 .child img{
     height: 60px;
 }
+
+.containerr{
+    height: 200px;
+    width: 90%;
+    margin: 0 auto;
+    background-color: aqua;
+    transition: transform 0.3s ease;
+}
 @media (max-width: 1280px){
     .grandparent{
     flex-direction: column;
+    }
+    .containerr{
+        width: 50%;
     }
 }
