--- a/css/try.css
+++ b/css/try.css
@@ -3,7 +3,8 @@
     /* margin: 10px;
     padding: 10px; */
     text-align: center;
-    display: flex;
+    /* display: flex; */
+    display: none;
     justify-content: center;
     margin: 0 auto;
 }
@@ -26,18 +27,41 @@
     height: 60px;
 }
 
-.containerr{
-    height: 200px;
-    width: 90%;
-    margin: 0 auto;
-    background-color: aqua;
-    transition: transform 0.3s ease;
+.parent-1{
+    display: flex;
+    
 }
+.container{
+    display: unset;
+}
+.parent-1{
+    height: 400px;
+    width: 100%;
+    background-color: #b6b6b6;
+    margin: 0 auto 0 auto;
+    display: flex;
+    flex-direction: row;
+}
+.parent-1 .child-01,
+.parent-1 .child-02{
+    /* flex: 1; */
+    border: 2px solid red;
+    justify-content: center;
+    margin: 0 auto;
+    width: 50%;
+    height: 50%;
+    min-width: 300px;
+}
+
+
 @media (max-width: 1280px){
     .grandparent{
     flex-direction: column;
     }
     .containerr{
         width: 50%;
+    }
+    .parent-1{
+        flex-direction: column;
     }
 }
