--- a/css/fasilitas.css
+++ b/css/fasilitas.css
@@ -78,16 +78,18 @@ body {
 /* end nav */
 
 .container-top{
+    border: 1px solid red;
     margin-top: 100px;
     height: 640px;
     width: 100%;
-    background-color: rgb(212, 212, 212);
+    background-color: rgb(240, 240, 240);
 }
 .container-top .fasilitas-1{
     display: flex;
     max-width: 1200px;
     height: 640px;
     margin: 0 auto;
+    flex-direction: row;
 }
 .container-top .fasilitas-1 .child-1{
     /* border: 1px solid red; */
@@ -95,7 +97,6 @@ body {
     margin: 0 auto;
     width: 50%;
     display: flex;
-    justify-content: center;
     align-items: center
 }
 .container-top .fasilitas-1 .child-1 img{
@@ -130,7 +131,12 @@ body {
     }
 }
 @media (max-width: 1200px) {
-    
+    .container-top .fasilitas-1{
+        max-width: 1024px;
+    }
+    .container-top .fasilitas-1 .child-1 img{
+        width: 100%;
+    }
 }
 @media (max-width: 1024px) {
     /*navbar sticky on top adjust margin left & right*/
@@ -140,6 +146,20 @@ body {
     }
     .navbar .menu_full{
         margin-right: 50px; /*nav irght margin*/
+    }
+    .container-top .fasilitas-1{
+        max-width: 1024px;
+    }
+    .container-top .fasilitas-1 .child-1{
+        justify-content: flex-end;
+        align-content: stretch;
+    }
+    .container-top .fasilitas-1 .child-2 .wrapped{
+        justify-content: flex-start;
+        width: 90%;
+    }
+    .container-top .fasilitas-1 .child-1 img{
+        width: 95%;
     }
 }
 
@@ -293,13 +313,60 @@ body {
     .menu__item:hover {
         background-color: #CFD8DC;
     }
+    .container-top{
+        height: 850px;
+        padding-top: 100px;
+    }
+    .container-top .fasilitas-1{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .container-top .fasilitas-1 .child-1,
+    .container-top .fasilitas-1 .child-2{
+        width: 550px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 10px;
+        max-width: none;
+    }
+    .container-top .fasilitas-1 .child-2 h1{
+        margin: 15px auto;
+    }
+    .container-top .fasilitas-1 .child-2 .wrapped{
+        width: 85%;
+    }
+    .container-top .fasilitas-1 .child-1 img{
+        overflow: hidden;
+        object-fit: cover;
+        height: 550px;
+        width: 550px;
+    
+    }
 }
-
+@media (max-width: 550px) {
+    .container-top .fasilitas-1 .child-1,
+    .container-top .fasilitas-1 .child-2{
+        width: 100%;
+    }
+    .container-top .fasilitas-1 .child-1 img{
+        width: 98%;
+    }   
+}
 @media (max-width: 480px) {
     html {
         font-size: 75%;
     }
     .navbar .hamburger-menu{
         margin-left: 10px;
+    }
+    .container-top .fasilitas-1 .child-1 img{
+        height: 400px;
+    }
+    .container-top{
+        height: 620px;
+        padding: 0;
+        
     }
 }
