--- a/css/fasilitas.css
+++ b/css/fasilitas.css
@@ -78,7 +78,7 @@ body {
 /* end nav */
 
 .container-top{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     margin-top: 100px;
     height: 640px;
     width: 100%;
