--- a/css/style.css
+++ b/css/style.css
@@ -270,18 +270,21 @@ body {
     display: flex;
     justify-content: center;
     margin: 0 auto;
+    width: 80%;
 }
 .container-dua .grandparent .parent {
     display: inline-block;
     /* border: 1px solid rgb(0, 60, 255); */
     /* padding: 12px; */
-    vertical-align: bottom;
+    vertical-align: middle;
+    width: 100%;
 }
 .container-dua .grandparent .parent .child {
     display: inline-block;
     /* border: 1px solid red; */
-    padding: 20px;
+    padding: 20px 10px;
     margin: 0px;
+    width: 315px;
     word-wrap: break-word;
     vertical-align: middle;
 
@@ -295,6 +298,16 @@ body {
 .container-dua .grandparent .parent .child:hover{
     cursor: pointer;
 }
+.container-dua .grandparent .child  input{
+    display: none;
+}
+.container-dua .grandparent .parent .child button{
+    background-color: rgba(0, 0, 0 , 0.0);
+    border: 0px;
+}
+
+
+
 /* container 3 - Fasilitas*/
 
 .container-tiga .info .hr-center{
@@ -414,16 +427,13 @@ body {
 	color: rgba(0, 0, 0 , 0.7)
 }
 .info h3 {
-	margin: 15px 0 0px;
+	margin: 15px 0 0 0;
 	font-size: 24px;
 	font-weight: 600;
 	text-transform: uppercase;
 }
-.info .price {
-	margin: 0;
-	font-size: 30px;
-	font-weight: bold;
-	color: aqua;
+.info p{
+    border: 1px solid red;
 }
 
 #overlayheadhl{
@@ -550,6 +560,10 @@ footer{
 
 
 @media (max-width: 1600px) {
+    .container-dua .grandparent .parent .child {
+        width: 254px;
+    
+    }
     .container-tiga h1{
         text-align: center;
         margin-top: 50px;
@@ -620,6 +634,15 @@ footer{
 
 
 }
+@media (max-width: 1124px) {
+    .container-dua .grandparent .parent .child{
+        width: 200px;
+    }
+    .container-dua .grandparent .parent .child img{
+        height: 50px;
+    }
+
+}
 @media (max-width: 1024px) {
     .container-satu .bgimage{
         margin-top: -100px; 
@@ -651,9 +674,7 @@ footer{
         height: 55px;
         width: 60px;
     } */
-    .container-dua .grandparent .parent .child{
-        width: 200px;
-    }
+
     .container-dua .carousell{
         width: 870px;
     }
@@ -706,200 +727,203 @@ footer{
         padding-top: 50px;
     }
 }
-
+@media (max-width: 800px) {
+    .container-tiga .single-card {
+        margin: 50px 15px 15px 15px;
+    }
+    .container-empat .box-parent{
+        margin-top: 900px;
+    }
+}
 @media (max-width: 768px) {
     
-.container-satu{
-    background-color: unset;
-    margin-top: -100px;
-}
-.container-satu .btn-centered .btn-contact {
-    width: 180px;
-    height: 48px;
-    padding: 0;
-    font-size: 14px;
-}
-.navbar{
-    height: 80px;
-    position: sticky;
-}
-.namalogo {
-    margin: 0;
-}
+    .container-satu{
+        background-color: unset;
+        margin-top: -100px;
+    }
+    .container-satu .btn-centered .btn-contact {
+        width: 180px;
+        height: 48px;
+        padding: 0;
+        font-size: 14px;
+    }
+    .navbar{
+        height: 80px;
+        position: sticky;
+    }
+    .namalogo {
+        margin: 0;
+    }
 
-.menu_full {
-    font-size: 22px;
-    font-weight: 450;
-    margin-right: 150px; /* Right margin for the menu */
-}
+    .menu_full {
+        font-size: 22px;
+        font-weight: 450;
+        margin-right: 150px; /* Right margin for the menu */
+    }
 
-.menu_full a {
-    margin-left: 20px;
-    color: #000000;
-}
+    .menu_full a {
+        margin-left: 20px;
+        color: #000000;
+    }
 
-.hamburger-menu {
-    margin-left: 20px; /* Left margin for the hamburger menu */
-    justify-content: flex-start; /* Align the hamburger menu to the right */
-}
-
-
-.hamburger-menu .menu__box {
-    text-align: left;
-}
+    .hamburger-menu {
+        margin-left: 20px; /* Left margin for the hamburger menu */
+        justify-content: flex-start; /* Align the hamburger menu to the right */
+    }
 
 
-#shownav{
-    top: 0px;
-    /* position: sticky; */
-}
-
-.container-satu .logo , .navbar .logo{
-    display: none;
-}
-.namalogo {
-    display: none; 
-    /* nama logo ada 2, mobile and desktop */
-}
+    .hamburger-menu .menu__box {
+        text-align: left;
+    }
 
 
-.navbar .namalogomobile{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 50px;
-}
+    #shownav{
+        top: 0px;
+        /* position: sticky; */
+    }
 
-.navbar .namalogomobile img{
-    display: flex;
-    height: 100%; 
-}
-.container-satu .bgimage{
-    margin-top: 0px;
-}
-.container-satu .menu_top{
-    display: none;
-}
-.navbar .hamburger-menu{
-    display: flex;
-    
-}
-.navbar .menu_full{
-    display: none;
-}
-
-#menu__toggle {
-    opacity: 0;
-}
-#menu__toggle:checked + .menu__btn > span {
-    transform: rotate(45deg);
-}
-#menu__toggle:checked + .menu__btn > span::before {
-    top: 0;
-    transform: rotate(0deg);
-}
-#menu__toggle:checked + .menu__btn > span::after {
-    top: 0;
-    transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu__box {
-    left: 0 !important;
-}
-.menu__btn {
-    position: fixed;
-    margin: 7 10 30 30;
-    width: 40px;
-    height: 60px;
-    cursor: pointer;
-    z-index: 1;
-    /* background-color: #b9b6b6; */
-}
+    .container-satu .logo , .navbar .logo{
+        display: none;
+    }
+    .namalogo {
+        display: none; 
+        /* nama logo ada 2, mobile and desktop */
+    }
 
 
-.menu__btn > span{
-    margin-top: 30px;
-    
-}
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 5px;
-    background-color: #000000;
-    transition-duration: .25s;
-    border-radius: 5px;
+    .navbar .namalogomobile{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: 50px;
+    }
 
-}
-.menu__btn > span::before {
-    content: '';
-    top: -12px;
-}
-.menu__btn > span::after {
-    content: '';
-    top: 12px;
-}
-.menu__box {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    width: 300px;
-    height: 100%;
-    margin: 0;
-    padding: 80px 0;
-    list-style: none;
-    background-color: #ECEFF1;
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
-    transition-duration: .25s;
-}
-.menu__item {
-    display: block;
-    padding: 12px 24px;
-    color: #333;
-    font-size: 20px;
-    font-weight: 600;
-    text-decoration: none;
-    transition-duration: .25s;
-}
-.menu__item:hover {
-    background-color: #CFD8DC;
-}
+    .navbar .namalogomobile img{
+        display: flex;
+        height: 100%; 
+    }
+    .container-satu .bgimage{
+        margin-top: 0px;
+    }
+    .container-satu .menu_top{
+        display: none;
+    }
+    .navbar .hamburger-menu{
+        display: flex;
+        
+    }
+    .navbar .menu_full{
+        display: none;
+    }
+
+    #menu__toggle {
+        opacity: 0;
+    }
+    #menu__toggle:checked + .menu__btn > span {
+        transform: rotate(45deg);
+    }
+    #menu__toggle:checked + .menu__btn > span::before {
+        top: 0;
+        transform: rotate(0deg);
+    }
+    #menu__toggle:checked + .menu__btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+    }
+    #menu__toggle:checked ~ .menu__box {
+        left: 0 !important;
+    }
+    .menu__btn {
+        position: fixed;
+        margin: 7 10 30 30;
+        width: 40px;
+        height: 60px;
+        cursor: pointer;
+        z-index: 1;
+        /* background-color: #b9b6b6; */
+    }
+
+
+    .menu__btn > span{
+        margin-top: 30px;
+        
+    }
+    .menu__btn > span,
+    .menu__btn > span::before,
+    .menu__btn > span::after {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 5px;
+        background-color: #000000;
+        transition-duration: .25s;
+        border-radius: 5px;
+
+    }
+    .menu__btn > span::before {
+        content: '';
+        top: -12px;
+    }
+    .menu__btn > span::after {
+        content: '';
+        top: 12px;
+    }
+    .menu__box {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 300px;
+        height: 100%;
+        margin: 0;
+        padding: 80px 0;
+        list-style: none;
+        background-color: #ECEFF1;
+        box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+        transition-duration: .25s;
+    }
+    .menu__item {
+        display: block;
+        padding: 12px 24px;
+        color: #333;
+        font-size: 20px;
+        font-weight: 600;
+        text-decoration: none;
+        transition-duration: .25s;
+    }
+    .menu__item:hover {
+        background-color: #CFD8DC;
+    }
 
 
 
-/* .container-dua .icon-set{
-    flex-direction: row;
-    word-wrap: break-word;
-    align-items: flex-start;
-}
-.container-dua .icon-set .icon{
-    max-width: 150px;
-    
-}
+    /* .container-dua .icon-set{
+        flex-direction: row;
+        word-wrap: break-word;
+        align-items: flex-start;
+    }
+    .container-dua .icon-set .icon{
+        max-width: 150px;
+        
+    }
 
-.container-dua .icon-set img{
-    height: 35px;
-    width: 40px;
-} */
-.container-dua .carousell{
-    width: 90%;
-}
-.container-dua .carousell img{
-    height: 400px;
-}
-.container-empat .box-parent{
-    margin-top: 1200px;
-}
+    .container-dua .icon-set img{
+        height: 35px;
+        width: 40px;
+    } */
+    .container-dua .carousell{
+        width: 90%;
+    }
+    .container-dua .carousell img{
+        height: 400px;
+    }
+    .container-dua .grandparent .parent .child{
+        width: 200px;
 
-.container-dua .grandparent .parent .child{
-    width: 150px;
-
-}
-.container-dua .grandparent .parent .child img{
-    height: 40px;
-}
+    }
+    .container-dua .grandparent .parent .child img{
+        height: 40px;
+    }
 }
 
 @media (max-width: 610px) {
