fix bug unopen hambruger on stick

--- a/css/fasilitas.css
+++ b/css/fasilitas.css
@@ -293,6 +293,7 @@ body {
     }
     
     #menu__toggle {
+        position: fixed;
         opacity: 0;
     }
     #menu__toggle:checked + .menu__btn > span {
