--- a/css/style.css
+++ b/css/style.css
@@ -817,6 +817,7 @@ footer{
     }
 
     #menu__toggle {
+        position: fixed;
         opacity: 0;
     }
     #menu__toggle:checked + .menu__btn > span {
