--- a/css/highlight.css
+++ b/css/highlight.css
@@ -242,6 +242,7 @@ body {
     }
     
     #menu__toggle {
+        position: fixed;
         opacity: 0;
     }
     #menu__toggle:checked + .menu__btn > span {
