--- a/css/highlight.css
+++ b/css/highlight.css
@@ -259,6 +259,7 @@ body {
     #menu__toggle:checked ~ .menu__box {
         left: 0 !important;
     }
+    
     .menu__btn {
         position: fixed;
         margin: 7 10 30 30;
@@ -266,7 +267,6 @@ body {
         height: 60px;
         cursor: pointer;
         z-index: 1;
-        /* background-color: #b9b6b6; */
     }
     
     .menu__btn > span{
@@ -330,9 +330,11 @@ body {
     }
     .child{
         height: 400px;
+        width: 120%;
+        margin-left: -25px;
+        
     }
     .child .image-area img{
-        width: 100%;
         height: 280px;
         object-fit: cover;
     }
