--- a/css/fasilitas.css
+++ b/css/fasilitas.css
@@ -321,7 +321,7 @@ body {
     }
     
     .menu__btn > span{
-        margin-top: 30px;
+        margin: 35px 0 0 20px ;
         
     }
     .menu__btn > span,
@@ -473,5 +473,8 @@ body {
     }
     .container-top .bg-add{
         height: 600px;
+    }
+    .menu__btn > span{
+        margin: 35px 0 0 0px ;
     }
 }
