--- a/css/highlight.css
+++ b/css/highlight.css
@@ -270,7 +270,7 @@ body {
     }
     
     .menu__btn > span{
-        margin-top: 30px;
+        margin: 35px 0 0 20px ;
         
     }
     .menu__btn > span,
@@ -338,5 +338,8 @@ body {
         height: 280px;
         object-fit: cover;
     }
-
+    .menu__btn > span{
+        margin: 35px 0 0 0px ;
+        
+    }
 }
