--- a/css/fasilitas.css
+++ b/css/fasilitas.css
@@ -77,6 +77,9 @@ body {
 
 /* end nav */
 
+.custom-width {
+    width: 540px;
+}
 .container-top{
     /* border: 1px solid red;  */
     width: 100%;
@@ -106,8 +109,8 @@ body {
 .container-top .fasilitas-1 .child-1 img{
     overflow: hidden;
     object-fit: cover;
-    height: 530px;
-    width: 530px;
+    height: 540px;
+    width: 540px;
 
 }
 .container-top .fasilitas-1 .child-2{
@@ -370,6 +373,8 @@ body {
     .menu__item:hover {
         background-color: #adadad;
     }
+    /* narvabr end */
+
 
     .container-top{
         margin-top: 80px;
@@ -420,8 +425,9 @@ body {
         padding: 10px;
         max-width: none;
     }
-    .container-top .fasilitas-2 .child-2 h1{
-        margin: 15px auto;
+    .container-top .fasilitas-2 .child-2 h1,h1{
+        margin: 10px auto;
+        font-size: 30px;
     }
     .container-top .fasilitas-2 .child-2 .wrapped{
         width: 85%;
@@ -482,4 +488,12 @@ body {
     .menu__btn > span{
         margin: 35px 0 0 0px ;
     }
+    .container-top .fasilitas-2 .child-2 h1,h1{
+        font-size: 20px;
+    }
+    .container-top .fasilitas-1 .child-1 img,
+    .container-top .fasilitas-2 .child-1 img{
+        height: 350px;
+    }
+
 }
