--- a/css/style.css
+++ b/css/style.css
@@ -957,13 +957,19 @@ footer{
     }
     .container-empat .box-parent{
         width: 90%;
+        height: 700px;
     }
     .container-empat .box-parent .child-1{
-        margin: 45px 25px 45px 25px;
+        margin: 35px 25px 45px 25px;
+        flex: 2;
+    }
+    .container-empat .box-parent .child-1 p{
+        font-size: 18px;
     }
     .container-empat .box-parent .child-2{
         padding: 0 5px 0 5px;
         margin: 0 auto 30px auto;
+        flex: 4;
     }
 
 }
@@ -993,6 +999,20 @@ footer{
 @media (max-width: 320px) {
     .container-dua .grandparent .parent .child{
         width: 140px;
+    }
+    .container-empat .box-parent .child-1 h2{
+        font-size: 30px;
+    }
+    .container-empat .box-parent .child-1 p{
+        font-size: 16px;
+    }
+    .container-empat .box-parent .child-1{
+        margin: 25px 15px 45px 15px;
+    }
+    .container-empat .box-parent .child-2{
+        padding: 0;
+        margin: 0 auto 30px auto;
+        flex: 4;
     }
 }
 
